--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "camera-project",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,16 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
-    "expo-camera": "~12.2.0",
-    "expo-location": "~14.2.2",
-    "expo-media-library": "~14.1.0",
-    "expo-permissions": "~13.2.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-web": "0.17.1",
+    "expo-camera": "~12.1.1",
+    "expo-constants": "~13.0.2",
+    "expo-permissions": "~13.1.1",
+    "@expo/vector-icons": "^12.0.0",
+    "expo-media-library": "~14.0.1",
+    "react-native-paper": "4.9.2",
+    "expo-sharing": "~10.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
